--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,177 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Georgia, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.SliderArrayBlock {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
+  height: 620px;
+  background-color: rgb(160, 210, 251);
+  border-radius: 44px;
+  margin: 20px;
+  padding: 20px;
+}
+
+.SliderContainer {
+  display: flex;
+  flex-direction: row;
+  width: 1000px;
+  align-items: center;
+}
+.SliderPage {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+}
+.PaginationBlock {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
+.PaginationNumberSelected {
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 360px;
+  background-color: blue;
+  width: 20px;
+  height: 20px;
+}
+.PaginationNumber {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 360px;
+  background-color: rgba(66, 99, 234, 0.497);
+  width: 20px;
+  height: 20px;
+}
+/* ButtonArrow */
+.arrow-left-2 {
+  display: flex;
+  cursor: pointer;
+  height: 120px;
+  width: 80px;
+  position: relative;
+  margin: 20px;
+}
+.arrow-left-2-top,
+.arrow-left-2-bottom {
+  background: #337ab7;
+  height: 10px;
+  left: -30px;
+  position: absolute;
+  top: 60px;
+  width: 100px;
+}
+.arrow-left-2-top {
+  top: 51px;
+}
+.arrow-left-2-top {
+  transform: rotate(45deg);
+  transform-origin: bottom left;
+}
+.arrow-left-2-bottom {
+  transform: rotate(-45deg);
+  transform-origin: top left;
+}
+.arrow-left-2-top::after,
+.arrow-left-2-bottom::after {
+  background: #000;
+  content: "";
+  height: 100%;
+  position: absolute;
+  top: 0;
+  transition: all 0.15s;
+}
+.arrow-left-2-top::after {
+  left: 100%;
+  right: 0;
+  transition-delay: 0.15s;
+}
+.arrow-left-2-bottom::after {
+  left: 0;
+  right: 100%;
+  transition-delay: 0s;
+}
+.arrow-left-2:hover .arrow-left-2-top::after {
+  left: 0;
+  transition-delay: 0s;
+}
+.arrow-left-2:hover .arrow-left-2-bottom::after {
+  right: 0;
+  transition-delay: 0.15s;
+}
+.buttonArrowText {
+  margin-top: 34px;
+  margin-right: 10px;
+}
+.arrow-2 {
+  cursor: pointer;
+  height: 120px;
+  width: 80px;
+  position: relative;
+  margin: 20px;
+}
+.arrow-2-top,
+.arrow-2-bottom {
+  background: #337ab7;
+  height: 10px;
+  left: -30px;
+  position: absolute;
+  top: 60px;
+  width: 100px;
+}
+.arrow-2-top {
+  top: 64px;
+}
+.arrow-2-top {
+  transform: rotate(45deg);
+  transform-origin: bottom right;
+}
+.arrow-2-bottom {
+  transform: rotate(-45deg);
+  transform-origin: top right;
+}
+.arrow-2-top::after,
+.arrow-2-bottom::after {
+  background: #000;
+  content: "";
+  height: 100%;
+  position: absolute;
+  top: 0;
+  transition: all 0.15s;
+}
+.arrow-2-top::after {
+  left: 100%;
+  right: 0;
+  transition-delay: 0s;
+}
+.arrow-2-bottom::after {
+  left: 0;
+  right: 100%;
+  transition-delay: 0.15s;
+}
+.arrow-2:hover .arrow-2-top::after {
+  left: 0;
+  transition-delay: 0.15s;
+}
+.arrow-2:hover .arrow-2-bottom::after {
+  right: 0;
+  transition-delay: 0s;
+}
+.disabledbutton {
+  pointer-events: none;
+  opacity: 0.4;
 }
